--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,10 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.statemachine</groupId>
+			<artifactId>spring-statemachine-core</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.statemachine</groupId>
 			<artifactId>spring-statemachine-data-jpa</artifactId>
 		</dependency>
 		<dependency>
