--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,12 @@
 			<artifactId>lombok</artifactId>
 			<version>1.18.36</version>
 		</dependency>
+
+		<dependency>
+			<groupId>guru.nidi</groupId>
+			<artifactId>graphviz-java</artifactId>
+			<version>0.18.1</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
