Multiply datasource support example

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,12 @@
 services:
   postgresdb:
-    container_name: state.machine.test.db
+    container_name: statemachine.db
     image: 'postgres:latest'
     restart: always
     environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=statetest
-      - POSTGRES_DB=statedb
+      - POSTGRES_USER=statemachine
+      - POSTGRES_PASSWORD=statemachine
+      - POSTGRES_DB=statemachine
       - PGDATA=/var/lib/postgresql/data/pgdata
     ports:
       - 5432:5432
