--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,16 +2,18 @@ spring:
   application:
     name: lot-state-poc
   autoconfigure:
+    # Excluded from autoconfiguration because we use our own datasource
     exclude: org.springframework.statemachine.boot.autoconfigure.StateMachineJpaRepositoriesAutoConfiguration
   jpa:
     hibernate:
       ddl-auto: update
-# DB settings
+# Default application datasource (can be another DB not the same with State machine)
 audax:
   datasource:
     jdbc-url: jdbc:postgresql://localhost:5432/statemachine
     username: statemachine
     password: statemachine
+# State machine datasource
 statemachine:
   datasource:
     jdbc-url: jdbc:postgresql://localhost:5432/statemachine
